add header styles

--- a/2_page/index.html
+++ b/2_page/index.html
@@ -9,32 +9,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Playfair+Display&display=swap" rel="stylesheet">
-    <title>New project</title>
+    <title>Beautyness</title>
 </head>
 <body>
     <header>
+        <div class="img">
         <img id="logo" src="./assets/img/logo_dark.svg" alt="logo Beautyness">
-        <div>
-            <img src="./assets/img/phone.png" alt="phone">
-            <span>Call Us &ndash; (&#43;22) 123 456 7890 </span>
+        </div>
+        <div class="phone">
+            <div><img src="./assets/img/phone.png" alt="phone"></div>
+            <div>Call Us &ndash; (&#43;22) 123 456 7890 </div>
         </div>
         <nav>
             <ul>
-                <li><a class="nav" href="#">Home</a></li>
+                <li><a class="nav this" href="#">Home</a></li>
                 <li><a class="nav" href="#">About</a></li>
                 <li><a class="nav" href="#">Pages</a></li>
                 <li><a class="nav" href="#">Contact Us</a></li>
             </ul>
         </nav>
-        <div>
-            <img src="./assets/img/facebook.png" alt="facebook">
-            <img src="./assets/img/twitter.png" alt="twitter">
-            <img src="./assets/img/in.png" alt="linkedin">
+        <div class="conts">
+            <a href="#"><img src="./assets/img/facebook.png" alt="facebook"></a>
+            <a href="#"><img src="./assets/img/twitter.png" alt="twitter"></a>
+            <a href="#"><img src="./assets/img/in.png" alt="linkedin"></a>
         </div>
-        <button>
-            <img src="./assets/img/reservation.png" alt="reservation">
-            RESERVATION
+        <div class="h-but">
+            <button>
+            <div><img src="./assets/img/reservation.png" alt="reservation"></div>
+            <div> RESERVATION</div>
         </button>
+    </div>
     </header>
 
     <main>
