--- a/2_page/index.html
+++ b/2_page/index.html
@@ -109,8 +109,7 @@
             </div>
             </div>
             <div class="img">
-                    <img class="img-1" src="./assets/img/img-for-choose-1.png" alt="img-for-choose">
-                    <img class="img-2" src="./assets/img/img-for-choose-2.png" alt="img-for-choose">
+                    <img src="./assets/img/img-for-choose-2.png" alt="img-for-choose">
                 </div>
         </section>
     </main>
